Add diy section

--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -109,8 +109,8 @@
           </div>
         </div>
         <div class="container">
+          <h2 class="availability-title">Disponible</h2>
           <div class="availability">
-            <h3>Disponible</h3>
             <div class="availability-cards">
               <div class="availability-cards-card">
                 <img
@@ -149,94 +149,134 @@
           </div>
         </div>
       </section>
-
       <section>
-        <div class="slider">
-          <div class="slider-card">
-            <div class="slider-card-like">
-              <i class="fa-regular fa-heart"></i>
+        <div class="container">
+          <h2 class="slider-title">Ensembles en vedette</h2>
+          <div class="slider">
+            <div class="slider-card">
+              <div class="slider-card-head">
+                <i class="fa-regular fa-heart"></i>
+                <span>Exclusivité</span>
+              </div>
+              <img
+                class="slider-card-img"
+                src="/img/concorde.webp"
+                alt="image vectorielle d'une brique de construction LEGO"
+              />
+              <div class="slider-card-icons">
+                <div>
+                  <i class="fa-solid fa-cake-candles"></i> <span>+6</span>
+                </div>
+                <div>
+                  <i class="fa-solid fa-puzzle-piece"></i> <span>542</span>
+                </div>
+                <div><i class="fa-regular fa-star"></i> <span> 4.6</span></div>
+              </div>
+              <h3 class="slider-card-title">Le concorde</h3>
+              <p class="slider-card-price">299,99€</p>
+              <button class="slider-card-button">Ajouter au panier</button>
             </div>
-            <img
-              class="slider-card-img"
-              src="/img/10343_Prod.webp"
-              alt="image vectorielle d'une brique de construction LEGO"
-            />
-            <div class="slider-card-icons">
-              <i class="fa-solid fa-cake-candles"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-solid fa-puzzle-piece"></i>
-            </div>
-            <h3 class="slider-card-title">Title</h3>
-            <p class="slider-card-description">Le concorde</p>
-            <p class="slider-card-price">299,99€</p>
-            <button class="slider-card-button">Ajouter au panier</button>
-          </div>
-          <div class="slider-card">
-            <img
-              class="slider-card-img"
-              src="/img/harry.webp"
-              alt="image vectorielle d'une brique de construction LEGO"
-            />
-            <div class="slider-card-icons">
-              <i class="fa-solid fa-cake-candles"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-solid fa-puzzle-piece"></i>
-            </div>
-            <h3 class="slider-card-title">Title</h3>
-            <p class="slider-card-description">L'orchidée miniature</p>
-            <p class="slider-card-price">299,99€</p>
-            <button class="slider-card-button">Ajouter au panier</button>
-          </div>
-          <div class="slider-card">
-            <img
-              class="slider-card-img"
-              src="/img/10344_Prod.webp"
-              alt="image vectorielle d'une brique de construction LEGO"
-            />
-            <div class="slider-card-icons">
-              <i class="fa-solid fa-cake-candles"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-solid fa-puzzle-piece"></i>
-            </div>
-            <h3 class="slider-card-title">Title</h3>
-            <p class="slider-card-description">Le bambou de la chance</p>
-            <p class="slider-card-price">299,99€</p>
-            <button class="slider-card-button">Ajouter au panier</button>
-          </div>
-          <div class="slider-card">
-            <img
-              class="slider-card-img"
-              src="/img/31165_Prod_en-gb.webp"
-              alt="image vectorielle d'une brique de construction LEGO"
-            />
-            <div class="slider-card-icons">
-              <i class="fa-solid fa-cake-candles"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-solid fa-puzzle-piece"></i>
-            </div>
-            <h3 class="slider-card-title">
-              Animaux sauvages : La famille de pandas
-            </h3>
 
-            <p class="slider-card-price">299,99€</p>
-            <button class="slider-card-button">Ajouter au panier</button>
-          </div>
-          <div class="slider-card">
-            <img
-              class="slider-card-img"
-              src="/img/10343_Prod.webp"
-              alt="image vectorielle d'une brique de construction LEGO"
-            />
-            <div class="slider-card-icons">
-              <i class="fa-solid fa-cake-candles"></i>
-              <i class="fa-regular fa-star"></i>
-              <i class="fa-solid fa-puzzle-piece"></i>
+            <div class="slider-card">
+              <div class="slider-card-head">
+                <i class="fa-regular fa-heart"></i>
+                <span>Exclusivité</span>
+              </div>
+              <img
+                class="slider-card-img"
+                src="/img/harry.webp"
+                alt="image vectorielle d'une brique de construction LEGO"
+              />
+              <div class="slider-card-icons">
+                <div>
+                  <i class="fa-solid fa-cake-candles"></i> <span>+6</span>
+                </div>
+                <div>
+                  <i class="fa-solid fa-puzzle-piece"></i> <span>542</span>
+                </div>
+                <div><i class="fa-regular fa-star"></i> <span> 4.6</span></div>
+              </div>
+              <h3 class="slider-card-title">Side car - Harry Potter</h3>
+              <p class="slider-card-price">299,99€</p>
+              <button class="slider-card-button">Ajouter au panier</button>
             </div>
-            <h3 class="slider-card-title">LOVE</h3>
-            <p class="slider-card-price">299,99€</p>
-            <button class="slider-card-button">Ajouter au panier</button>
+            <div class="slider-card">
+              <div class="slider-card-head">
+                <i class="fa-regular fa-heart"></i>
+                <span>Exclusivité</span>
+              </div>
+              <img
+                class="slider-card-img"
+                src="/img/harry-potter.png"
+                alt="image vectorielle d'une brique de construction LEGO"
+              />
+              <div class="slider-card-icons">
+                <div>
+                  <i class="fa-solid fa-cake-candles"></i> <span>+6</span>
+                </div>
+                <div>
+                  <i class="fa-solid fa-puzzle-piece"></i> <span>542</span>
+                </div>
+                <div><i class="fa-regular fa-star"></i> <span> 4.6</span></div>
+              </div>
+              <h3 class="slider-card-title">Poudlard - Harry Potter</h3>
+              <p class="slider-card-price">299,99€</p>
+              <button class="slider-card-button">Ajouter au panier</button>
+            </div>
+            <div class="slider-card">
+              <div class="slider-card-head">
+                <i class="fa-regular fa-heart"></i>
+                <span>Exclusivité</span>
+              </div>
+              <img
+                class="slider-card-img"
+                src="/img/31165_Prod_en-gb.webp"
+                alt="image vectorielle d'une brique de construction LEGO"
+              />
+              <div class="slider-card-icons">
+                <div>
+                  <i class="fa-solid fa-cake-candles"></i> <span>+6</span>
+                </div>
+                <div>
+                  <i class="fa-solid fa-puzzle-piece"></i> <span>542</span>
+                </div>
+                <div><i class="fa-regular fa-star"></i> <span> 4.6</span></div>
+              </div>
+              <h3 class="slider-card-title">
+                Animaux sauvages : La famille de pandas
+              </h3>
+
+              <p class="slider-card-price">299,99€</p>
+              <button class="slider-card-button">Ajouter au panier</button>
+            </div>
+            <div class="slider-card">
+              <div class="slider-card-head">
+                <i class="fa-regular fa-heart"></i>
+                <span>Exclusivité</span>
+              </div>
+              <img
+                class="slider-card-img"
+                src="/img/love.webp"
+                alt="image vectorielle d'une brique de construction LEGO"
+              />
+              <div class="slider-card-icons">
+                <div>
+                  <i class="fa-solid fa-cake-candles"></i> <span>+6</span>
+                </div>
+                <div>
+                  <i class="fa-solid fa-puzzle-piece"></i> <span>542</span>
+                </div>
+                <div><i class="fa-regular fa-star"></i> <span> 4.6</span></div>
+              </div>
+              <h3 class="slider-card-title">LOVE</h3>
+              <p class="slider-card-price">299,99€</p>
+              <button class="slider-card-button">Ajouter au panier</button>
+            </div>
           </div>
         </div>
+      </section>
+      <section class="DIY">
+        <div style="width: 200px; height: 300px"></div>
       </section>
     </main>
 
