tree folder rebuild

--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/pages/shop/shop.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -276,7 +277,17 @@
         </div>
       </section>
       <section class="DIY">
-        <div style="width: 200px; height: 300px"></div>
+        <div class="container">
+          <h2 class="DIY-title">Construit par toi</h2>
+          <p class="DIY-subtitle">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
+            ratione perferendis harum nemo optio quisquam corporis odio dolor
+            deserunt officia cum, eveniet commodi tempore provident?
+          </p>
+          <div class="DIY-cards">
+            <div class="DIY-card"></div>
+          </div>
+        </div>
       </section>
     </main>
 
