--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -31,6 +31,17 @@
           <li><a href="/pages/contact/contact.html">Contact</a></li>
         </ul>
       </nav>
+      <div class="header-icons">
+        <div class="header-icons-search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input class="search" type="text" placeholder="rechercher...">
+        </div>
+        <i class="fa-solid fa-heart"></i>
+        <div class="header-icons-cart">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <span>0</span>
+        </div>
+      </div>
       <nav class="nav-mobile">
         <div class="close-icon"><i class="fa-solid fa-xmark"></i></div>
         <ul class="menu-mobile">
@@ -129,11 +140,11 @@
           <div class="news">
             <img
               class="news-img"
-              src="/img/lego.png"
+              src="/img/Botanicals-10342-HT-202501-Block-Standard.webp"
               alt="image vectorielle d'une brique de construction LEGO"
             />
             <div>
-              <h3 class="nexs-title">Title</h3>
+              <h3 class="news-title">Title</h3>
               <p class="news-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Possimus porro non ab consectetur quos obcaecati, eaque libero
@@ -149,6 +160,11 @@
             </div>
           </div>
           <div class="news">
+            <img
+            class="news-img"
+            src="/img/Botanicals-Homepage-202501-Block-Standard-Giftcard.webp"
+            alt="image vectorielle d'une brique de construction LEGO"
+          />
             <div>
               <h3 class="nexs-title">Title 2</h3>
               <p class="news-description">
@@ -164,11 +180,7 @@
                 quidem! Perferendis repellat fuga quidem.00
               </p>
             </div>
-            <img
-              class="news-img"
-              src="/img/lego.png"
-              alt="image vectorielle d'une brique de construction LEGO"
-            />
+           
           </div>
         </div>
       </section>
