--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -41,7 +41,7 @@
         <div class="header-icons-heart"><i class="fa-solid fa-heart"></i></div>
         <div class="header-icons-cart">
           <i class="fa-solid fa-cart-shopping"></i>
-          <span>0</span>
+          <span>3</span>
         </div>
       </div>
       <nav class="nav-mobile">
@@ -57,14 +57,23 @@
     <main>
       <section class="shop">
         <div class="banner-shop">
-          <img class="banner-shop-img" src="/img/harry-potter.png" alt="" />
           <div class="banner-shop-content">
-            <h1>Oyez Oyez</h1>
-            <h2>Découvrez les dernières nouveautés de 2025 !</h2>
+            <h1 class="banner-shop-content-title">
+              Découvre nos dernières nouveautés
+            </h1>
+            <p class="banner-shop-content-subtitle">
+              Découvrez nos dernières nouveautés comme le bouquet fleuri LEGO
+              Floral.
+            </p>
             <button class="button">Acheter ></button>
-            <button class="button">Nouveautés ></button>
+            <button class="button button-big">
+              Découvrir les nouveautés >
+            </button>
           </div>
-          <img class="banner-shop-img" src="/img/lego-tudor.png" alt="" />
+          <img
+            src="/img/Botanicals-10342-HT-202501-Block-Standard.webp"
+            alt=""
+          />
         </div>
 
         <!-- CATEGORIES -->
@@ -153,17 +162,20 @@
           </div>
         </div>
       </section>
-      <section>
+
+      <!-- Slider -->
+      <section class="slider-section">
         <div class="container">
-          <div>
-            <h2 class="slider-title">Ensembles en vedette</h2>
+          <div class="slider-title">
+            <h2>Ensembles en vedette</h2>
           </div>
           <div class="slider">
-            <!-- <div class="arrow-mobile">
+            <div class="arrow-mobile">
               <i class="fa-solid fa-chevron-left"></i>
               <i class="fa-solid fa-chevron-right"></i>
-            </div> -->
+            </div>
             <div class="slider-card">
+              <!-- <div class="preview"><i class="fa-solid fa-eye"></i></div> -->
               <div class="slider-card-head">
                 <i class="fa-regular fa-heart"></i>
                 <span>Exclusivité</span>
@@ -301,16 +313,31 @@
           </div>
         </div>
       </section>
-      <section class="DIY">
+      <section class="diy">
         <div class="container">
-          <h2 class="DIY-title">Construit par toi</h2>
-          <p class="DIY-subtitle">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-            ratione perferendis harum nemo optio quisquam corporis odio dolor
-            deserunt officia cum, eveniet commodi tempore provident?
+          <h2 class="diy-title">Construit par toi</h2>
+          <p class="diy-subtitle">
+            Publie tes photos sur Instagram et mentionne @LEGO dans la légende
+            pour avoir une chance d’apparaître sur le site Internet, et achète
+            les jouets que tu aimes ci-dessous.
           </p>
-          <div class="DIY-cards">
-            <div class="DIY-card"></div>
+          <div class="diy-cards">
+            <div class="diy-card">
+              <img src="/img/chateau.webp" alt="" />
+              <span>Visiter la boutique</span>
+            </div>
+            <div class="diy-card">
+              <img src="/img/house.webp" alt="" />
+              <span>Visiter la boutique</span>
+            </div>
+            <div class="diy-card">
+              <img src="/img/map.webp" alt="" />
+              <span>Visiter la boutique</span>
+            </div>
+            <div class="diy-card">
+              <img src="/img/c3po.webp" alt="" />
+              <span>Visiter la boutique</span>
+            </div>
           </div>
         </div>
       </section>
