--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./home.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
       src="https://kit.fontawesome.com/24442cdd0f.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/script.js" defer></script>
+    <script src="./script.js" defer></script>
     <title>HTML CSS</title>
   </head>
   <body>
