--- a/shop.html
+++ b/shop.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="shop.css" />
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./shop.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/24442cdd0f.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/script.js" defer></script>
+    <script src="./script.js" defer></script>
     <title>HTML CSS</title>
   </head>
   <body>
