--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <img class="logo" src="/img/logo.png" alt="logo" />
+      <img class="logo" src="./img/logo.png" alt="logo" />
       <div class="burger-icon">
         <i class="fa-solid fa-bars"></i>
       </div>
@@ -56,7 +56,7 @@
     <div class="div-form">
       <img
         class="contact-img"
-        src="/img/png-clipart-lego-heads-ep-lego-head-thumbnail.png"
+        src="./img/png-clipart-lego-heads-ep-lego-head-thumbnail.png"
         alt=""
       />
       <form action="/action_page.php">
@@ -120,7 +120,7 @@
         </ul>
       </div>
       <div class="copyright">
-        <img class="copyright-logo" src="/img/logo.png" alt="logo" />
+        <img class="copyright-logo" src="./img/logo.png" alt="logo" />
         <p class="copyright-text">Copyright 2025</p>
       </div>
       <div class="social-media">
