--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
    <!-- Header -->
    <header class="header">
-    <img class="logo" src="/img/logo.png" alt="logo" />
+    <img class="logo" src="./img/logo.png" alt="logo" />
     <div class="burger-icon">
       <i class="fa-solid fa-bars"></i>
     </div>
@@ -140,7 +140,7 @@
           <div class="news">
             <img
               class="news-img"
-              src="/img/Botanicals-10342-HT-202501-Block-Standard.webp"
+              src="./img/Botanicals-10342-HT-202501-Block-Standard.webp"
               alt="image vectorielle d'une brique de construction LEGO"
             />
             <div>
@@ -162,7 +162,7 @@
           <div class="news">
             <img
             class="news-img"
-            src="/img/Botanicals-Homepage-202501-Block-Standard-Giftcard.webp"
+            src="./img/Botanicals-Homepage-202501-Block-Standard-Giftcard.webp"
             alt="image vectorielle d'une brique de construction LEGO"
           />
             <div>
@@ -196,7 +196,7 @@
         </ul>
       </div>
       <div class="copyright">
-        <img class="copyright-logo" src="/img/logo.png" alt="logo" />
+        <img class="copyright-logo" src="./img/logo.png" alt="logo" />
         <p class="copyright-text">Copyright 2025</p>
       </div>
       <div class="social-media">
