--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <img class="logo" src="/img/logo.png" alt="logo" />
+      <img class="logo" src="./img/logo.png" alt="logo" />
       <div class="burger-icon">
         <i class="fa-solid fa-bars"></i>
       </div>
@@ -80,42 +80,42 @@
         <div class="categories">
           <div class="categories-card">
             <img
-              src="/img/png-clipart-lego-carpenter-action-figure-illustration-amazon-com-lego-minifigures-the-lego-group-lego-accessories-toy-block-thumbnail.png"
+              src="./img/png-clipart-lego-carpenter-action-figure-illustration-amazon-com-lego-minifigures-the-lego-group-lego-accessories-toy-block-thumbnail.png"
               alt=""
             />
             <p>Workers</p>
           </div>
           <div class="categories-card">
             <img
-              src="/img/png-clipart-lego-captain-america-mini-figure-lego-marvel-super-heroes-lego-marvel-s-avengers-captain-america-iron-man-hulk-lego-avengers-heroes-thumbnail.png"
+              src="./img/png-clipart-lego-captain-america-mini-figure-lego-marvel-super-heroes-lego-marvel-s-avengers-captain-america-iron-man-hulk-lego-avengers-heroes-thumbnail.png"
               alt=""
             />
             <p>Marvel</p>
           </div>
           <div class="categories-card">
             <img
-              src="/img/png-clipart-lego-construction-worker-mini-figure-emmet-wyldstyle-the-lego-movie-lego-minifigure-the-lego-movie-toy-block-film-thumbnail.png"
+              src="./img/png-clipart-lego-construction-worker-mini-figure-emmet-wyldstyle-the-lego-movie-lego-minifigure-the-lego-movie-toy-block-film-thumbnail.png"
               alt=""
             />
             <p>Espace</p>
           </div>
           <div class="categories-card">
             <img
-              src="/img/png-clipart-lego-detective-character-mini-figure-the-lego-movie-lego-minifigures-lego-71018-minifigures-series-17-lego-minifigures-ninjago-the-lego-movie-lego-minifigures.png"
+              src="./img/png-clipart-lego-detective-character-mini-figure-the-lego-movie-lego-minifigures-lego-71018-minifigures-series-17-lego-minifigures-ninjago-the-lego-movie-lego-minifigures.png"
               alt=""
             />
             <p>Detective</p>
           </div>
           <div class="categories-card">
             <img
-              src="/img/png-clipart-lego-house-lego-minifigure-lego-creator-lego-ninjago-toy-photography-toy-block-thumbnail.png"
+              src="./img/png-clipart-lego-house-lego-minifigure-lego-creator-lego-ninjago-toy-photography-toy-block-thumbnail.png"
               alt=""
             />
             <p>Painter</p>
           </div>
           <div class="categories-card">
             <img
-              src="/img/png-clipart-lego-ninjago-minifig-lloyd-garmadon-lego-ninjago-lego-minifigure-robe-ninja-cartoon-fictional-character-thumbnail.png"
+              src="./img/png-clipart-lego-ninjago-minifig-lloyd-garmadon-lego-ninjago-lego-minifigure-robe-ninja-cartoon-fictional-character-thumbnail.png"
               alt=""
             />
             <p>Ninjago</p>
@@ -127,7 +127,7 @@
             <div class="availability-cards">
               <div class="availability-cards-card">
                 <img
-                  src="/img/10355-Home-202501-Home-P-Block-Standard.webp"
+                  src="./img/10355-Home-202501-Home-P-Block-Standard.webp"
                   alt=""
                 />
                 <h3>Nouveau Jouet</h3>
@@ -139,7 +139,7 @@
               </div>
               <div class="availability-cards-card">
                 <img
-                  src="/img/2038-Home-202501-KV-Block-Standard.webp"
+                  src="./img/2038-Home-202501-KV-Block-Standard.webp"
                   alt=""
                 />
                 <h3>Nouveau Jouet</h3>
@@ -150,7 +150,10 @@
                 <span>Vérifier la disponibilité ></span>
               </div>
               <div class="availability-cards-card">
-                <img src="/img/SW-75403-HT-202501-Block-Standard.webp" alt="" />
+                <img
+                  src="./img/SW-75403-HT-202501-Block-Standard.webp"
+                  alt=""
+                />
                 <h3>Nouveau Jouet</h3>
                 <p>
                   Impossible de passer à côté de ce jouet qui ravira les petits
@@ -192,7 +195,7 @@
               >
                 <img
                   class="slider-card-img"
-                  src="/img/cabine.webp"
+                  src="./img/cabine.webp"
                   alt="image vectorielle d'une brique de construction LEGO"
                 />
               </div>
@@ -220,7 +223,7 @@
                 >
                 <img
                   class="slider-card-img"
-                  src="/img/harry.webp"
+                  src="./img/harry.webp"
                   alt="image vectorielle d'une brique de construction LEGO"
                 />
               </div>
@@ -245,7 +248,7 @@
               </div>
               <img
                 class="slider-card-img"
-                src="/img/harry-potter.png"
+                src="./img/harry-potter.png"
                 alt="image vectorielle d'une brique de construction LEGO"
               />
               <div class="slider-card-icons">
@@ -268,7 +271,7 @@
               </div>
               <img
                 class="slider-card-img"
-                src="/img/31165_Prod_en-gb.webp"
+                src="./img/31165_Prod_en-gb.webp"
                 alt="image vectorielle d'une brique de construction LEGO"
               />
               <div class="slider-card-icons">
@@ -294,7 +297,7 @@
               </div>
               <img
                 class="slider-card-img"
-                src="/img/love.webp"
+                src="./img/love.webp"
                 alt="image vectorielle d'une brique de construction LEGO"
               />
               <div class="slider-card-icons">
@@ -323,19 +326,19 @@
           </p>
           <div class="diy-cards">
             <div class="diy-card">
-              <img src="/img/chateau.webp" alt="" />
+              <img src="./img/chateau.webp" alt="" />
               <span>Visiter la boutique</span>
             </div>
             <div class="diy-card">
-              <img src="/img/house.webp" alt="" />
+              <img src="./img/house.webp" alt="" />
               <span>Visiter la boutique</span>
             </div>
             <div class="diy-card">
-              <img src="/img/map.webp" alt="" />
+              <img src="./img/map.webp" alt="" />
               <span>Visiter la boutique</span>
             </div>
             <div class="diy-card">
-              <img src="/img/c3po.webp" alt="" />
+              <img src="./img/c3po.webp" alt="" />
               <span>Visiter la boutique</span>
             </div>
           </div>
@@ -354,7 +357,7 @@
         </ul>
       </div>
       <div class="copyright">
-        <img class="copyright-logo" src="/img/logo.png" alt="logo" />
+        <img class="copyright-logo" src="./img/logo.png" alt="logo" />
         <p class="copyright-text">Copyright 2025</p>
       </div>
       <div class="social-media">
