fix images done

--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
             </button>
           </div>
           <img
-            src="/img/Botanicals-10342-HT-202501-Block-Standard.webp"
+            src="./img/Botanicals-10342-HT-202501-Block-Standard.webp"
             alt=""
           />
         </div>
