--- a/shop.html
+++ b/shop.html
@@ -121,6 +121,8 @@
             <p>Ninjago</p>
           </div>
         </div>
+
+        <!-- AVAILABILITY -->
         <div class="container">
           <div class="availability">
             <h2 class="availability-title">Disponible</h2>
@@ -199,7 +201,6 @@
                   alt="image vectorielle d'une brique de construction LEGO"
                 />
               </div>
-
               <div class="slider-card-icons">
                 <div>
                   <i class="fa-solid fa-cake-candles"></i> <span>+6</span>
@@ -213,7 +214,6 @@
               <p class="slider-card-price">299,99€</p>
               <button class="slider-card-button">Ajouter au panier</button>
             </div>
-
             <div class="slider-card">
               <div class="slider-card-head">
                 <i class="fa-regular fa-heart"></i>
@@ -227,7 +227,6 @@
                   alt="image vectorielle d'une brique de construction LEGO"
                 />
               </div>
-
               <div class="slider-card-icons">
                 <div>
                   <i class="fa-solid fa-cake-candles"></i> <span>+6</span>
@@ -286,7 +285,6 @@
               <h3 class="slider-card-title">
                 Animaux sauvages : La famille de pandas
               </h3>
-
               <p class="slider-card-price">299,99€</p>
               <button class="slider-card-button">Ajouter au panier</button>
             </div>
@@ -316,6 +314,7 @@
           </div>
         </div>
       </section>
+      <!-- DIY -->
       <section class="diy">
         <div class="container">
           <h2 class="diy-title">Construit par toi</h2>
