--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="uw9LU0ICw8eJpGw-AsQ0zE9U6BS-iroih7ABP96O_2Y" />
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./home.css">
     <link
